# try-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  try-rs.tape
.github/workflows/: apt-repo.yml  ppa_publish.yml  release-windows.yml  release.yml  rust.yml  update_aur.yml  vhs.yml
debian/: changelog  control
scripts/: release.sh
src/: cli.rs  config.rs  main.rs  shell.rs  themes.rs  tui.rs  utils.rs
test/: cli_test.rs  config_test.rs  integration_test.rs  shell_test.rs  themes_test.rs  tui_test.rs  utils_test.rs
