cargo-features = ["edition2024"]

[package]
name = "try-rs"
version = "0.1.55"
authors = ["Tassio Virginio <tassio.virginio@gmail.com>"]
homepage = "https://github.com/tassiovirginio/try-rs"
edition = "2024"
description = "Temporary workspace manager for fast experimentation in the terminal"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tassiovirginio/try-rs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["tui", "workspace", "experiments", "cli", "ratatui"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
chrono = "0.4.43"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
toml = "0.9.11+spec-1.1.0"
clap = { version = "4.5.54", features = ["derive"] }
libc = "0.2"

[package.metadata.deb]
maintainer = "Tassio Virginio <tassio.virginio@gmail.com>"
copyright = "2024, Tassio Virginio"
license-file = ["LICENSE", "4"]
extended-description = """
try-rs is a CLI tool designed to manage the chaos of temporary projects.
It includes a TUI (Terminal User Interface) to create, navigate, and clean up your experiments,
with support for git cloning, auto-dating directories, and multiple project types.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  [
    "target/release/try-rs",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/try-rs/README.md",
    "644",
  ],
]

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Enable LTO
codegen-units = 1   # Use a single codegen for size optimization
panic = "abort"     # Remove traceback information
