# cargo-features = ["edition2024"]

[package]
name = "try-rs"
version = "1.7.3"
authors = ["Tassio Virginio <tassio.virginio@gmail.com>"]
homepage = "https://github.com/tassiovirginio/try-rs"
edition = "2024"
description = "Temporary workspace manager for fast experimentation in the terminal"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tassiovirginio/try-rs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "experiments", "ratatui", "tui", "workspace"]

[package.metadata.deb]
maintainer = "Tassio Virginio <tassio.virginio@gmail.com>"
copyright = "2024, Tassio Virginio"
license-file = ["LICENSE", "4"]
extended-description = """
try-rs is a CLI tool designed to manage the chaos of temporary projects.
It includes a TUI (Terminal User Interface) to create, navigate, and clean up your experiments,
with support for git cloning, auto-dating directories, and multiple project types.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  [
    "target/release/try-rs",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/try-rs/README.md",
    "644",
  ],
]

[[test]]
name = "integration_test"
path = "test/integration_test.rs"
test = true

[[test]]
name = "utils_test"
path = "test/utils_test.rs"
test = true

[[test]]
name = "config_test"
path = "test/config_test.rs"
test = true

[[test]]
name = "themes_test"
path = "test/themes_test.rs"
test = true

[[test]]
name = "cli_test"
path = "test/cli_test.rs"
test = true

[[test]]
name = "shell_test"
path = "test/shell_test.rs"
test = true

[[test]]
name = "tui_test"
path = "test/tui_test.rs"
test = true

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
libc = "0.2.183"
ratatui = "0.30.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
toml = "1.0.6"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable LTO
panic = "abort"  # Remove traceback information
codegen-units = 1  # Use a single codegen for size optimization
